# Groundwater-Flow-Simulator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GIT_WORKFLOW.md  Groundwater_concept.md  LICENSE  Online_App.url  README.md  START_APP.bat  app.py  gitbefehle.md  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py  testpushfemke.md
.github/workflows/: ci.yml
.streamlit/: config.toml
Simulator/: groundwater_model.py
Simulator/backend/: simulation_service.py
Simulator/frontend/: streamlit_app.py
Streamlit_Start/: 1_Online_App.url  2_Lokal_Starten.bat  README.txt
docs/: API.md  ARCHITECTURE.md  README.md
examples/: README.md
my_project/: .gitignore  README.md  __init__.py  groundwater_model.py  pyproject.toml  test_app.py
my_project/backend/: __init__.py  simulation_service.py
my_project/frontend/: __init__.py  streamlit_app.py
my_project/my_project/: START_APP.bat  app.py
my_project/my_project/frontend/: streamlit_app.py
my_project/tests/: local_test_app.py  local_test_app2.py
my_project/tests/Other/: analytical_pressure_solution.py  tom_simulator.py
tests/: README.md  local_test_app.py  local_test_app2.py  test_groundwater_model.py  test_simulation_service.py
